dataset1235/2025-2/2868285114/users/2697660235/executions/3649835072_1927446959.log
== RUN (2025-08-16 00:55:12)
-- CODE: 
valorDeEntrada = float(input("Dinheiros: "))
print("Resultado: ",round((valorDeEntrada*27/100,2)))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Resultado: ",round((valorDeEntrada*27/100,2)))
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Resultado: ",round((valorDeEntrada*27/100,2)))
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Resultado: ",round((valorDeEntrada*27/100,2)))
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Resultado: ",round((valorDeEntrada*27/100,2)))
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Resultado: ",round((valorDeEntrada*27/100,2)))
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Resultado: ",round((valorDeEntrada*27/100,2)))
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 03:32:56)
-- CODE: 
y1 = float(input())

calculo = y1*(27/100)
calculo2 = y1 + y1*(42/100)
calculo3 = y1 - y1*(63/100)

print(round(calculo,2))
print(round(calculo2,2))
print(round(calculo3,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:29:43)
-- CODE: 
valorDeEntrada = float(input())
print(round(valorDeEntrada*(27/100),2))
print(round(valorDeEntrada + valorDeEntrada*(42/100),2))
print(round( valorDeEntrada - valorDeEntrada*(63/100),2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 00:58:55)
-- CODE: 
valorDeEntrada = float(input("Dinheiros: "))
print("Resultado: ",round((valorDeEntrada*(27/100),2)))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Resultado: ",round((valorDeEntrada*(27/100),2)))
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Resultado: ",round((valorDeEntrada*(27/100),2)))
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Resultado: ",round((valorDeEntrada*(27/100),2)))
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Resultado: ",round((valorDeEntrada*(27/100),2)))
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Resultado: ",round((valorDeEntrada*(27/100),2)))
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Resultado: ",round((valorDeEntrada*(27/100),2)))
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 03:29:27)
-- CODE: 
 y = float(input())

calculo = y*(27/100)
calculo2 = y + y*(42/100)
calculo3 = y - y*(63/100)

print(round(calculo,2))
print(round(calculo2,2))
print(round(calculo3,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-16 01:29:50)
-- CODE: 
valorDeEntrada = float(input())
print(round(valorDeEntrada*(27/100),2))
print(round(valorDeEntrada + valorDeEntrada*(42/100),2))
print(round( valorDeEntrada - valorDeEntrada*(63/100),2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:00:41)
-- CODE: 
valorDeEntrada = float(input("Dinheiros: "))
print("Resultado: ",round(valorDeEntrada*(27/100),2))
print("Resultado: ",round(valorDeEntrada*(42/100),2))
print("Resultado: ",round(valorDeEntrada*(63/100),2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
Resultado:  77.58
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
Resultado:  15.75
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
Resultado:  205.13
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
Resultado:  2247.78
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
Resultado:  3418.51
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
Resultado:  7.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:20:07)
-- CODE: 
valorDeEntrada = float(input("Dinheiros: "))
print("Resultado: ",round(valorDeEntrada*(27/100),2))
print("Resultado: ",round(valorDeEntrada + valorDeEntrada*42/100),2))
print("Resultado: ",round(valorDeEntrada*(1-63/100),2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada + valorDeEntrada*42/100),2))
                                                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada + valorDeEntrada*42/100),2))
                                                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada + valorDeEntrada*42/100),2))
                                                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada + valorDeEntrada*42/100),2))
                                                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada + valorDeEntrada*42/100),2))
                                                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada + valorDeEntrada*42/100),2))
                                                                        ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 00:59:56)
-- CODE: 
valorDeEntrada = float(input("Dinheiros: "))
print("Resultado: ",round(valorDeEntrada*(27/100),2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
Dinheiros: Resultado:  33.25
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
Dinheiros: Resultado:  6.75
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
Dinheiros: Resultado:  87.91
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
Dinheiros: Resultado:  963.33
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
Dinheiros: Resultado:  1465.07
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
Dinheiros: Resultado:  3.28
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:21:16)
-- CODE: 
valorDeEntrada = float(input("Dinheiros: "))
print("Resultado: ",round(valorDeEntrada*(27/100),2))
print("Resultado: ",round(valorDeEntrada + valorDeEntrada*(42/100),2))
print("Resultado: ",round( valorDeEntrada - valorDeEntrada*(63/100),2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
Resultado:  45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
Resultado:  9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
Resultado:  120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
Resultado:  1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
Resultado:  2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
Resultado:  4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:15:41)
-- CODE: 
valorDeEntrada = float(input("Dinheiros: "))
print("Resultado: ",round(valorDeEntrada*(27/100),2))
print("Resultado: ",round(valorDeEntrada*(1+42/100),2))
print("Resultado: ",round(valorDeEntrada*(1-63/100),2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
Resultado:  45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
Resultado:  9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
Resultado:  120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
Resultado:  1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
Resultado:  2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
Resultado:  4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 00:52:55)
-- CODE: 
valorDeEntrada = float(input("Dinheiros: "))
print("Resultado: ",round(valorDeEntrada*(27/100,2)))
print("Resultado: ",round(valorDeEntrada*(42/100,2)))
print("Resultado: ",round(valorDeEntrada*(63/100,2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Resultado: ",round(valorDeEntrada*(27/100,2)))
                              ~~~~~~~~~~~~~~^~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Resultado: ",round(valorDeEntrada*(27/100,2)))
                              ~~~~~~~~~~~~~~^~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Resultado: ",round(valorDeEntrada*(27/100,2)))
                              ~~~~~~~~~~~~~~^~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Resultado: ",round(valorDeEntrada*(27/100,2)))
                              ~~~~~~~~~~~~~~^~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Resultado: ",round(valorDeEntrada*(27/100,2)))
                              ~~~~~~~~~~~~~~^~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Resultado: ",round(valorDeEntrada*(27/100,2)))
                              ~~~~~~~~~~~~~~^~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 03:27:03)
-- CODE: 
 y = float(input())

calculo = y*(27/100)
calculo2 = y + y*(42/100)
calculo3 = y - y*(63/100)

print(round(calculo,2 ))
print(round(calculo2,2 ))
print(round(calculo3,2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:19:56)
-- CODE: 
valorDeEntrada = float(input("Dinheiros: "))
print("Resultado: ",round(valorDeEntrada*(27/100),2))
print("Resultado: ",round(valorDeEntrada + valorDeEntrada*+42/100),2))
print("Resultado: ",round(valorDeEntrada*(1-63/100),2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada + valorDeEntrada*+42/100),2))
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada + valorDeEntrada*+42/100),2))
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada + valorDeEntrada*+42/100),2))
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada + valorDeEntrada*+42/100),2))
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada + valorDeEntrada*+42/100),2))
                                                                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada + valorDeEntrada*+42/100),2))
                                                                         ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 22:31:08)
-- CODE: 
valorDeEntrada = float(input())

valor1 = valorDeEntrada*(27/100)
valor2 = valorDeEntrada + valorDeEntrada*(42/100)
valor3 = valorDeEntrada - valorDeEntrada*(63/100)

print(round(valor1,2))
print(round(valor2,2))
print(round(valor3,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:19:12)
-- CODE: 
valorDeEntrada = float(input("Dinheiros: "))
print("Resultado: ",round(valorDeEntrada*(27/100),2))
print("Resultado: ",round(valorDeEntrada+valorDeEntrada*+42/100),2))
print("Resultado: ",round(valorDeEntrada*(1-63/100),2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada+valorDeEntrada*+42/100),2))
                                                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada+valorDeEntrada*+42/100),2))
                                                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada+valorDeEntrada*+42/100),2))
                                                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada+valorDeEntrada*+42/100),2))
                                                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada+valorDeEntrada*+42/100),2))
                                                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada+valorDeEntrada*+42/100),2))
                                                                       ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 03:27:47)
-- CODE: 
 y = float(input())

calculo = y*(27/100)
calculo2 = y + y*(42/100)
calculo3 = y - y*(63/100)

print(round(calculo,2 ))
print(round(calculo2,2 ))
print(round(calculo3,2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:19:13)
-- CODE: 
valorDeEntrada = float(input("Dinheiros: "))
print("Resultado: ",round(valorDeEntrada*(27/100),2))
print("Resultado: ",round(valorDeEntrada+valorDeEntrada*+42/100),2))
print("Resultado: ",round(valorDeEntrada*(1-63/100),2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada+valorDeEntrada*+42/100),2))
                                                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada+valorDeEntrada*+42/100),2))
                                                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada+valorDeEntrada*+42/100),2))
                                                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada+valorDeEntrada*+42/100),2))
                                                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada+valorDeEntrada*+42/100),2))
                                                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada+valorDeEntrada*+42/100),2))
                                                                       ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:07:59)
-- CODE: 
valorDeEntrada = float(input("Dinheiros: "))
print("Resultado: ",round(valorDeEntrada*(27/100),2))
print("Resultado: ",round(valorDeEntrada*(27/100)+(42/100),2))
print("Resultado: ",round(valorDeEntrada*(63/100),2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
Resultado:  77.58
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
Resultado:  15.75
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
Resultado:  205.13
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
Resultado:  2247.78
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
Resultado:  3418.51
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
Resultado:  7.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:27:41)
-- CODE: 
valorDeEntrada = float(input("Dinheiros: "))
print("Resultado: ",round(valorDeEntrada*(27/100),2))
print("Resultado: ",round(valorDeEntrada + valorDeEntrada*(42/100),2))
print("Resultado: ",round( valorDeEntrada - valorDeEntrada*(63/100),2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
Resultado:  45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
Resultado:  9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
Resultado:  120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
Resultado:  1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
Resultado:  2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
Resultado:  4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-16 01:21:30)
-- CODE: 
valorDeEntrada = float(input("Dinheiros: "))
print("Resultado: ",round(valorDeEntrada*(27/100),2))
print("Resultado: ",round(valorDeEntrada + valorDeEntrada*(42/100),2))
print("Resultado: ",round( valorDeEntrada - valorDeEntrada*(63/100),2))

-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
Resultado:  45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
Resultado:  9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
Resultado:  120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
Resultado:  1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
Resultado:  2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
Resultado:  4.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:23:13)
-- CODE: 
valorDeEntrada = float(input("Dinheiros: "))
print("Resultado: ",round(valorDeEntrada*(27/100),2))
print("Resultado: ",round(valorDeEntrada + valorDeEntrada*(42/100),2))
print("Resultado: ",round( valorDeEntrada - valorDeEntrada*(63/100),2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
Resultado:  45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
Resultado:  9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
Resultado:  120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
Resultado:  1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
Resultado:  2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
Resultado:  4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:10:02)
-- CODE: 
valorDeEntrada = float(input("Dinheiros: "))
print("Resultado: ",round(valorDeEntrada*(27/100),2))
print("Resultado: ",round(valorDeEntrada*(42/100)+ valorDeEntrada*(42/100),2))
print("Resultado: ",round(valorDeEntrada*(63/100),2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
Resultado:  77.58
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
Resultado:  15.75
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
Resultado:  205.13
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
Resultado:  2247.78
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
Resultado:  3418.51
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
Resultado:  7.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 03:29:53)
-- CODE: 
 y1= float(input())

calculo = y1*(27/100)
calculo2 = y1 + y1*(42/100)
calculo3 = y1 - y1*(63/100)

print(round(calculo,2))
print(round(calculo2,2))
print(round(calculo3,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 1
    y1= float(input())
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 1
    y1= float(input())
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 1
    y1= float(input())
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 1
    y1= float(input())
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 1
    y1= float(input())
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 1
    y1= float(input())
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 03:29:28)
-- CODE: 
 y = float(input())

calculo = y*(27/100)
calculo2 = y + y*(42/100)
calculo3 = y - y*(63/100)

print(round(calculo,2))
print(round(calculo2,2))
print(round(calculo3,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:19:11)
-- CODE: 
valorDeEntrada = float(input("Dinheiros: "))
print("Resultado: ",round(valorDeEntrada*(27/100),2))
print("Resultado: ",round(valorDeEntrada+valorDeEntrada*+42/100),2))
print("Resultado: ",round(valorDeEntrada*(1-63/100),2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada+valorDeEntrada*+42/100),2))
                                                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada+valorDeEntrada*+42/100),2))
                                                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada+valorDeEntrada*+42/100),2))
                                                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada+valorDeEntrada*+42/100),2))
                                                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada+valorDeEntrada*+42/100),2))
                                                                       ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada+valorDeEntrada*+42/100),2))
                                                                       ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:00:55)
-- CODE: 
valorDeEntrada = float(input("Dinheiros: "))
print("Resultado: ",round(valorDeEntrada*(27/100),2))
print("Resultado: ",round(valorDeEntrada*(42/100),2))
print("Resultado: ",round(valorDeEntrada*(63/100),2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
Resultado:  77.58
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
Resultado:  15.75
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
Resultado:  205.13
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
Resultado:  2247.78
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
Resultado:  3418.51
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
Resultado:  7.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 00:54:28)
-- CODE: 
valorDeEntrada = float(input("Dinheiros: "))
print("Resultado: ",round(valorDeEntrada*(27/100,2)))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Resultado: ",round(valorDeEntrada*(27/100,2)))
                              ~~~~~~~~~~~~~~^~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Resultado: ",round(valorDeEntrada*(27/100,2)))
                              ~~~~~~~~~~~~~~^~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Resultado: ",round(valorDeEntrada*(27/100,2)))
                              ~~~~~~~~~~~~~~^~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Resultado: ",round(valorDeEntrada*(27/100,2)))
                              ~~~~~~~~~~~~~~^~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Resultado: ",round(valorDeEntrada*(27/100,2)))
                              ~~~~~~~~~~~~~~^~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Resultado: ",round(valorDeEntrada*(27/100,2)))
                              ~~~~~~~~~~~~~~^~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-16 01:27:49)
-- CODE: 
valorDeEntrada = float(input("Dinheiros: "))
print("Resultado: ",round(valorDeEntrada*(27/100),2))
print("Resultado: ",round(valorDeEntrada + valorDeEntrada*(42/100),2))
print("Resultado: ",round( valorDeEntrada - valorDeEntrada*(63/100),2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
Resultado:  45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
Resultado:  9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
Resultado:  120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
Resultado:  1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
Resultado:  2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
Resultado:  4.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:09:15)
-- CODE: 
valorDeEntrada = float(input("Dinheiros: "))
print("Resultado: ",round(valorDeEntrada*(27/100),2))
print("Resultado: ",round(valorDeEntrada*(27/100)+ valorDeEntrada*(42/100),2))
print("Resultado: ",round(valorDeEntrada*(63/100),2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
Resultado:  77.58
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
Resultado:  15.75
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
Resultado:  205.13
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
Resultado:  2247.78
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
Resultado:  3418.51
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
Resultado:  7.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 03:27:15)
-- CODE: 
 y = float(imput())

calculo = y*(27/100)
calculo2 = y + y*(42/100)
calculo3 = y - y*(63/100)

print(round(calculo,2 ))
print(round(calculo2,2 ))
print(round(calculo3,2 ))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 1
    y = float(imput())
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 1
    y = float(imput())
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 1
    y = float(imput())
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 1
    y = float(imput())
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 1
    y = float(imput())
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 1
    y = float(imput())
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:17:34)
-- CODE: 
valorDeEntrada = float(input("Dinheiros: "))
print("Resultado: ",round(valorDeEntrada*(27/100),2))
print("Resultado: ",round(valorDeEntrada*(valorDeEntrada+42/100),2))
print("Resultado: ",round(valorDeEntrada*(1-63/100),2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
Resultado:  45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
Resultado:  9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
Resultado:  120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
Resultado:  1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
Resultado:  2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
Resultado:  4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 03:29:26)
-- CODE: 
 y = float(input())

calculo = y*(27/100)
calculo2 = y + y*(42/100)
calculo3 = y - y*(63/100)

print(round(calculo,2))
print(round(calculo2,2))
print(round(calculo3,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 1
    y = float(input())
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:20:08)
-- CODE: 
valorDeEntrada = float(input("Dinheiros: "))
print("Resultado: ",round(valorDeEntrada*(27/100),2))
print("Resultado: ",round(valorDeEntrada + valorDeEntrada*42/100),2))
print("Resultado: ",round(valorDeEntrada*(1-63/100),2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada + valorDeEntrada*42/100),2))
                                                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada + valorDeEntrada*42/100),2))
                                                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada + valorDeEntrada*42/100),2))
                                                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada + valorDeEntrada*42/100),2))
                                                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada + valorDeEntrada*42/100),2))
                                                                        ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
File "XXXX", line 3
    print("Resultado: ",round(valorDeEntrada + valorDeEntrada*42/100),2))
                                                                        ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-16 01:20:42)
-- CODE: 
valorDeEntrada = float(input("Dinheiros: "))
print("Resultado: ",round(valorDeEntrada*(27/100),2))
print("Resultado: ",round(valorDeEntrada + valorDeEntrada*(42/100),2))
print("Resultado: ",round(valorDeEntrada*(1-63/100),2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
Resultado:  45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
Resultado:  9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
Resultado:  120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
Resultado:  1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
Resultado:  2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
Resultado:  4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
